[project]
name = "xgrammar"
description = "Efficient, Flexible and Portable Structured Generation"
authors = [
    { name = "MLC Team" }
]
readme = "README.md"
license = { text = "Apache 2.0" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
]
keywords = ["machine learning", "inference"]
requires-python = ">=3.8, <4"
dependencies = [
    "pybind11",
    "pydantic",
    "pytest",
    "sentencepiece",
    "tiktoken",
    "torch",
    "transformers",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://xgrammar.mlc.ai/"
GitHub = "https://github.com/mlc-ai/xgrammar"

[project.optional-dependencies]
triton = [
    "triton",
]


[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "python/xgrammar/version.py"

[build-system]
requires = [
    "scikit-build-core>=0.10.0",
    "pybind11>=2.11.0",
    "wheel",
    "cmake>=3.18",
    "ninja",
]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
cmake.verison = ">=3.18"
ninja.version = ">=1.11"
cmake.args = []  # Add any custom CMake arguments here
# cmake.build-type = "Release" # release is default
build.verbose = true
wheel.packages = ["python/xgrammar"] 
wheel.license-files = ["LICENSE"]
wheel.install-dir = "xgrammar"
sdist.include = [
    "3rdparty/**/*",
    "cmake/**/*",
    "CMakeLists.txt",
    "cpp/**/*.cc",
    "cpp/**/*.cpp",
    "cpp/**/*.h",
    "cpp/**/CMakeLists.txt",
    "docs/**/*",
    "include/**/*",
    "LICENSE",
    "python/xgrammar/**/*.py",
    "tests/**/*",
    "README.md",
    "NOTICE",
]
sdist.exclude = [
    "**/.git",
    "**/.github",
    "**/__pycache__",
    "**/*.pyc",
    "build",
    "dist"
]

[tool.pytest.ini_options]
addopts = "-rA --durations=0 --ignore=3rdparty"

[tool.mypy]
strict = true

[tool.ruff]
exclude = ["3rdparty"]

[tool.ruff.lint]
ignore = [
  "E501",   # line too long, handled by black
  "PTH",
  "PGH",
  "D100",
  "D101",
  "D102",
  "D103",
  "D104",
  "D107",
  "D213",
  "D203",
  "D205",
  "D404",
  "D417",
  "D105",
  "FA",
  "ERA001",
  "SLF001",
]
select = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["E741", "PLR2004", "INP001", "ANN201", "S101", "T201", "A", "FBT"]

[tool.ruff.lint.pylint]
max-args = 10

[tool.black]
exclude = "3rdparty/*"
line-length = 100

[tool.isort]
profile = "black"
src_paths = ["python"]

[tool.cibuildwheel]
build-verbosity = 1
skip = ["cp36-*", "cp37-*", "pp*"] # pypy is not nice with pybind11
build = { requires = ["cmake>=3.12", "ninja"] }
environment = { SKBUILD_BUILD_OPTIONS="--" }



